@@ -2,6 +2,7 @@
  14.10.2014
  - bugfix any tag placed within "<script language=php>" will throw a security exception to close all thinkable holes
  - bugfix classmap in root composer.json should start at "libs/..."
+ - improvement cache is_file(file_exists) results of loadPlugin() to avoid unnecessary calls during compilation (Issue 201}
 
  12.10.2014
  - bugfix a comment like "<script{*foo*} language=php>" bypassed $php_handling checking (Thue Kristensen)
